# tts-discord-bot

./: .dockerignore  .env.example  Dockerfile.bot  Dockerfile.worker  README.md  docker-compose.yml  main.py  pyproject.toml  run-bot.sh  run-worker.sh
excalidraw/: editable_architecture.excalidraw
sql/: create_guild_channels_table.sql  create_guild_settings_table.sql  create_users_table.sql
tts-bot/: pyproject.toml
tts-bot/src/tts_bot/: __init__.py  __main__.py  bot.py  settings.py
tts-bot/src/tts_bot/cogs/: tts.py  voice.py
tts-bot/src/tts_bot/orm/: __init__.py  guild_channel.py  guild_settings.py  user.py
tts-bot/src/tts_bot/repository/: __init__.py  guild_channel_repository.py  guild_settings_repository.py  user_repository.py
tts-worker/: pyproject.toml
tts-worker/src/tts_worker/: __init__.py  __main__.py  polly.py  settings.py  worker.py
