[project]
name = "tts-bot"
version = "0.1.0"
description = "Discord TTS Bot"
requires-python = ">=3.13"
dependencies = [
    "discord.py[voice]>=2.3.0",
    "pydantic-settings>=2.0.0",
    "rabbitmq",
    "minio",
]

[tool.uv.sources]
rabbitmq = { workspace = true }
minio = { workspace = true }

[tool.uv.build]
module-root = "src"

[build-system]
requires = ["uv_build>=0.5.18"]
build-backend = "uv_build"
